<resources>
    <string name="app_name">Guess The Celebrity Game</string>
    <string name="guess_the_celebrity_game">Guess The Celebrity Game</string>
    <string name="about_the_game">About the Game</string>
    <string name="start_game">Start Game</string>
    <string name="next">Next</string>
    <string name="cosby">Bill Cosby</string>
    <string name="correct">Correct!</string>
    <string name="finish">Finish The Game</string>
    <string name="incorrect">Incorrect</string>
    <string name="about_game">\ \ \ \ This game has awkward celebrity photos. The user is allowed to guess as many times as they want and the score will be correct answers minus incorrect answers. Click the next button to move on to the next photo. There will be a score page after the last photo.</string>
    <string name="menu">Menu</string>
    <string name="images_to_the_guess_who_they_are">Images to the guess who they are.</string>
    <string name="your_score_will_go_here">Your score will go here</string>
    <string name="filler">filler</string>
    <string name="score_message">You\'ve got %1$d correct answers and %2$d incorrect answers. Your score is %3$d.</string>
    <string name="back">Back</string>
    <string name="backToMenu">Back To Menu</string>

</resources>